--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,35 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: black;
+  height: 300px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  background-image: url('./img/Empire.jpg');
 }
 
-.App-link {
-  color: #09d3ac;
+.App-title {
+  text-shadow: 2px 2px black;
+  font-size: 100px;
+}
+nav{
+  background-color: rgb(68, 56, 56);
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+ul li {
+  list-style: none;
+  color: white;
+  text-align: right;
+  margin-right: 20px;
+  font-size: 20px;
+
 }
