--- a/src/containers/HeaderNav/HeaderNav.scss
+++ b/src/containers/HeaderNav/HeaderNav.scss
@@ -1,7 +1,9 @@
+@import '../../styles/shared.scss';
+
 .ui.menu.top-menu {
   border: none;
   .logo {
-    width: 17rem;
+    width: $sidebar-left-width;
   }
   .nav-container {
     flex-grow: 1;
