--- a/src/containers/SideBar/SideBar.scss
+++ b/src/containers/SideBar/SideBar.scss
@@ -1,8 +1,10 @@
+@import '../../styles/shared.scss';
+
 .ui.menu.fixed.side-nav {
   background-color: #f5f5f5;
-  margin-top: 75px;
+  margin-top: $header-nav-height;
   overflow-y: auto;
-  padding-bottom: 75px;
+  padding-bottom: $header-nav-height;
 
   .sidebar-item:hover {
     background: #ebebeb;
